--- a/DemoBlog/Views/Home/CreateBlogPost.cshtml
+++ b/DemoBlog/Views/Home/CreateBlogPost.cshtml
@@ -14,7 +14,7 @@
 @Html.LabelFor(m => m.Post.Description)
 @Html.TextBoxFor(m => m.Post.Description)
 
-<input type="submit value="Submit" />
+<input type="submit" value="Submit" />
 }
 
 
